// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesn't transform local require 1`] = `
"
function test(require) {
  const context = require.context('foo', false);
}"
`;

exports[`doesn't transform require.context property 1`] = `
"
const context = require.context;"
`;

exports[`transforms require.context() call 1`] = `
"
const context = function () {
    function req() {}

    req.keys = function () {
        return [];
    };

    req.resolve = function () {};

    return req;
}();"
`;

exports[`transforms require.context() result 1`] = `
"
var modules = requireAll(function () {
    function req() {}

    req.keys = function () {
        return [];
    };

    req.resolve = function () {};

    return req;
}());"
`;
